[gd_scene load_steps=5 format=3 uid="uid://0bqo4ol11gha"]

[ext_resource type="Script" path="res://Scripts/CardExample.gd" id="1_841cm"]
[ext_resource type="Texture2D" uid="uid://cl8l5ph5us3q6" path="res://Assets/GUI Elements/CardCat.svg" id="1_aeuoj"]
[ext_resource type="SpriteFrames" uid="uid://dvqvji0f68m04" path="res://Scenes/Cats/Card.tres" id="3_6mijx"]
[ext_resource type="PackedScene" uid="uid://b43wcevchmnlo" path="res://Scenes/cat.tscn" id="10_wahyr"]

[node name="Card" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.6, 0.6)
script = ExtResource("1_841cm")
metadata/_edit_use_anchors_ = true

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -200.0
offset_top = -270.0
offset_right = 204.0
offset_bottom = 222.0
texture = ExtResource("1_aeuoj")

[node name="CatPreference" type="AnimatedSprite2D" parent="."]
position = Vector2(117, -159)
scale = Vector2(0.464981, 0.464981)
sprite_frames = ExtResource("3_6mijx")
animation = &"preferences"
frame = 4
frame_progress = 0.307161

[node name="CatPreference2" type="AnimatedSprite2D" parent="."]
position = Vector2(118, -19)
scale = Vector2(0.464981, 0.464981)
sprite_frames = ExtResource("3_6mijx")
animation = &"preferences"
frame = 3
frame_progress = 0.622941

[node name="CatPreference3" type="AnimatedSprite2D" parent="."]
position = Vector2(120, 129)
scale = Vector2(0.464981, 0.464981)
sprite_frames = ExtResource("3_6mijx")
animation = &"preferences"
frame = 3
frame_progress = 0.85239

[node name="Cat" parent="." instance=ExtResource("10_wahyr")]
